# news-weather_agent-langchain

./: .env.example  .gitignore  Dockerfile  README.md  agent_service.py  app.py  http_utils.py  llm_service.py  news_service.py  pyproject.toml  requirements.txt  settings.py  weather_service.py
.streamlit/: config.toml
app/: admin_clean.py  agent_prompts.py  agent_service.py  agent_tools.py  db.py  http_utils.py  location_resolver.py  main.py  news_service.py  ratelimit.py  redis_client.py  routes.py  session_auth.py  session_cache.py  settings.py  travel_brief.py  travel_concern_assessor.py  travel_intelligence.py  weather_service.py
app/agent/: agent_policy.py  agent_prompts.py  agent_service.py  agent_tools.py  followup_qa.py
app/http/: http_client.py  http_utils.py
app/location/: location_resolver.py  resolve_country.py
app/news/: news_service.py  serpapi_date_parser.py  serpapi_news_fetcher.py  tavily_search_fetcher.py
app/routing/: ors_service.py
app/session/: errors.py  session_auth.py  session_cache.py  session_keys.py  session_store.py
app/tooling/: retry_rate_limit.py  sync_cache.py  text_normalize.py
app/weather/: openmeteo_provider.py  openweather_provider.py  weather_service.py
tests/: test_agent_policy.py  test_agent_service.py  test_e2e_origin_flow.py  test_serpapi_news_fetcher.py  test_tavily_search_fetcher.py  test_travel_brief.py  test_travel_intelligence.py
tests/support/: __init__.py  redis_fakes.py
