[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "news-weather-agent"
version = "0.1.0"
description = "FastAPI + LangGraph + LangChain agent for weather, news, and city risk"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.1.0",
  "langgraph>=0.2.0",
  "openai>=1.40.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "requests>=2.32.0",
  "httpx>=0.27.0",
  "slowapi>=0.1.9"
]